Add build-logic module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,37 +1,8 @@
 plugins {
-  alias(libs.plugins.androidGradlePlugin)
-  alias(libs.plugins.kotlinPlugin)
+  id "example.android.application"
 }
 
 android {
-  compileSdk 32
-
-  defaultConfig {
-    applicationId "com.example.project.template"
-    minSdk 23
-    targetSdk 32
-    versionCode 1
-    versionName "1.0"
-
-    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    vectorDrawables {
-      useSupportLibrary true
-    }
-  }
-
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-    }
-  }
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
-  }
-  kotlinOptions {
-    jvmTarget = '1.8'
-  }
   buildFeatures {
     compose true
   }
