Make compose build logic

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,20 +2,7 @@ plugins {
   id "example.android.application"
 }
 
-android {
-  buildFeatures {
-    compose true
-  }
-  composeOptions {
-    kotlinCompilerExtensionVersion libs.versions.compose.get()
-  }
-  packagingOptions {
-    resources {
-      excludes += '/META-INF/{AL2.0,LGPL2.1}'
-    }
-  }
-  namespace 'com.example.project.template'
-}
+android.namespace 'com.example.project.template'
 
 dependencies {
   implementation libs.androidxCoreKtx
