--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,8 +10,9 @@ androidxActivity = "1.3.1"
 junit = "4.13.2"
 androidxTestExt = "1.1.3"
 androidxTestEspresso = "3.4.0"
-spotless = "6.7.0"
 dagger = "2.42"
+spotless = "6.7.2"
+ktlint = "0.43.0"
 
 [libraries]
 androidGradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
