--- a/gradle.properties
+++ b/gradle.properties
@@ -27,3 +27,7 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+org.gradle.configureondemand=true
+org.gradle.caching=true
+org.gradle.parallel=true
