--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,11 @@
 [versions]
 androidGradlePlugin = "7.4.0-alpha08"
-kotlin = "1.6.21"
+kotlin = "1.7.0"
 
 androidxCore = "1.7.0"
 androidDesugarJdkLibs = "1.1.5"
 compose = "1.2.0-beta03"
+composeCompiler = "1.2.0"
 androidxLifecycle = "2.3.1"
 androidxActivity = "1.3.1"
 junit = "4.13.2"
