Add check spotless

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      #      - name: Check spotless
-      #        run: ./gradlew spotlessCheck --stacktrace
+      - name: Check spotless
+        run: ./gradlew spotlessCheck --stacktrace
 
       - name: Check lint
         run: ./gradlew lintDebug --stacktrace
