--- a/.github/workflows/Format.yml
+++ b/.github/workflows/Format.yml
@@ -1,8 +1,7 @@
 name: Format
 on: [pull_request]
 jobs:
-  kotlin:
-    name: runner / suggester / spotless
+  format:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
