--- a/.github/workflows/Format.yml
+++ b/.github/workflows/Format.yml
@@ -1,5 +1,9 @@
 name: Format
 on: [pull_request]
+concurrency:
+  group: build-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   format:
     runs-on: ubuntu-latest
