--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Androidprojecttemplate2022"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="io.github.droidkaigi.confsched2022.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Androidprojecttemplate2022">
