--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-androidGradlePlugin = "7.4.0-alpha08"
+androidGradlePlugin = "7.4.0-alpha09"
 kotlin = "1.7.0"
 molecule = "0.3.0"
 
@@ -7,9 +7,11 @@ androidxCore = "1.8.0"
 androidDesugarJdkLibs = "1.2.0"
 compose = "1.2.0"
 composeCompiler = "1.2.0"
+composeMaterial3WindowSizeClass = "1.0.0-alpha15"
 androidxFragment = "1.5.1"
 androidxLifecycle = "2.5.0"
 androidxActivity = "1.6.0-alpha05"
+androidxNavigationCompose = "2.5.1"
 hiltNavigationCompose = "1.0.0"
 junit = "4.13.2"
 androidxTestExt = "1.1.3"
@@ -34,13 +36,14 @@ composeUiToolingPreview = { module = "androidx.compose.ui:ui-tooling-preview", v
 composeUiTestJunit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
 composeUiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
 composeUiTestManifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose" }
-
+composeMaterial3WindowSizeClass = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "composeMaterial3WindowSizeClass" }
 daggerHiltAndroid = { module = "com.google.dagger:hilt-android", version.ref = "dagger" }
 daggerHiltAndroidCompiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "dagger" }
 
 kotlinxCollectionsImmutable = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlinxCollectionsImmutable" }
 
 androidxCoreKtx = { module = "androidx.core:core-ktx", version.ref = "androidxCore" }
+androidxNavigationCompose = { module = "androidx.navigation:navigation-compose", version.ref = "androidxNavigationCompose" }
 androidxLifecycleLifecycleRuntimeKtx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
 androidxActivityActivityCompose = { module = "androidx.activity:activity-compose", version.ref = "androidxActivity" }
 androidxFragment = { module = "androidx.fragment:fragment", version.ref = "androidxFragment" }
