--- a/gradle.properties
+++ b/gradle.properties
@@ -31,3 +31,5 @@ android.nonTransitiveRClass=true
 org.gradle.configureondemand=true
 org.gradle.caching=true
 org.gradle.parallel=true
+
+kotlin.js.compiler=ir
