--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ androidDesugarJdkLibs = "1.2.0"
 compose = "1.2.1"
 composeCompiler = "1.2.0"
 composeMaterial3WindowSizeClass = "1.0.0-alpha15"
+composeMaterial3 = "1.0.0-alpha13"
 androidxFragment = "1.5.2"
 androidxLifecycle = "2.5.1"
 androidxActivity = "1.6.0-alpha05"
@@ -43,7 +44,7 @@ androidDesugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs"
 
 composeRuntime = { module = "androidx.compose.runtime:runtime", version.ref = "compose" }
 composeUi = { module = "androidx.compose.ui:ui", version.ref = "compose" }
-composeMaterial = { module = "androidx.compose.material:material", version.ref = "compose" }
+composeMaterial = { module = "androidx.compose.material:material3", version.ref = "composeMaterial3" }
 composeUiToolingPreview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 composeUiTestJunit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
 composeUiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
