--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ androidxFragment = "1.5.2"
 androidxLifecycle = "2.5.1"
 androidxActivity = "1.6.0-alpha05"
 androidxNavigationCompose = "2.5.1"
+androidxDatastore = "1.0.0"
 hiltNavigationCompose = "1.0.0"
 junit = "4.13.2"
 androidxTestExt = "1.1.3"
@@ -28,6 +29,7 @@ ziplineSnapshot = "1.0.0-SNAPSHOT"
 okHttp = "4.10.0"
 sqldelight = "1.5.3"
 kotlinxSerialization = "1.4.0-RC"
+multiplatformSettings = "0.9"
 
 [libraries]
 androidGradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
@@ -60,6 +62,10 @@ androidxNavigationCompose = { module = "androidx.navigation:navigation-compose",
 androidxLifecycleLifecycleRuntimeKtx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
 androidxActivityActivityCompose = { module = "androidx.activity:activity-compose", version.ref = "androidxActivity" }
 androidxFragment = { module = "androidx.fragment:fragment", version.ref = "androidxFragment" }
+androidxDatastorePreferences = { module = "androidx.datastore:datastore-preferences", version.ref = "androidxDatastore" }
+multiplatformSettingsCoroutines = { module = "com.russhwolf:multiplatform-settings-coroutines", version.ref = "multiplatformSettings" }
+multiplatformSettingsDatastore = { module = "com.russhwolf:multiplatform-settings-datastore", version.ref = "multiplatformSettings" }
+
 hiltNavigationCompose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 
 ktorClientCore = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
