--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,6 +31,7 @@ sqldelight = "1.5.3"
 kotlinxSerialization = "1.4.0-RC"
 multiplatformSettings = "0.9"
 robolectric = "4.8.1"
+kermit = "1.1.3"
 
 [libraries]
 androidGradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
@@ -75,15 +76,13 @@ ktorClientDarwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor"
 ktorKotlinxSerialization = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktorContentNegotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 kotlinxCoroutinesCore = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
-
 zipline = { module = "app.cash.zipline:zipline", version.ref = "zipline" }
 ziplineSnapshot = { module = "app.cash.zipline:zipline", version.ref = "ziplineSnapshot" }
 ziplineLoader = { module = "app.cash.zipline:zipline-loader", version.ref = "zipline" }
-
 okHttpCore = { module = "com.squareup.okhttp3:okhttp", version.ref = "okHttp" }
 sqldelightDriverAndroid = { module = "com.squareup.sqldelight:android-driver", version.ref = "sqldelight" }
-
 kotlinxCollectionsImmutable = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlinxCollectionsImmutable" }
+kermit = { module = "co.touchlab:kermit", version.ref = "kermit" }
 
 # test
 
