--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,7 @@ kotlinxSerialization = "1.4.0-RC"
 multiplatformSettings = "0.9"
 robolectric = "4.8.1"
 kermit = "1.1.3"
+kotlinxDatetime = "0.4.0"
 
 [libraries]
 androidGradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
@@ -76,6 +77,7 @@ ktorClientDarwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor"
 ktorKotlinxSerialization = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktorContentNegotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 kotlinxCoroutinesCore = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
+kotlinxDatetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 zipline = { module = "app.cash.zipline:zipline", version.ref = "zipline" }
 ziplineSnapshot = { module = "app.cash.zipline:zipline", version.ref = "ziplineSnapshot" }
 ziplineLoader = { module = "app.cash.zipline:zipline-loader", version.ref = "zipline" }
