--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
 androidGradlePlugin = "7.4.0-alpha09"
-kotlin = "1.7.0"
+kotlin = "1.7.10"
 molecule = "0.3.0"
 
 androidxCore = "1.8.0"
 androidDesugarJdkLibs = "1.2.0"
-compose = "1.2.1"
-composeCompiler = "1.2.0"
+compose = "1.3.0-alpha03"
+composeCompiler = "1.3.0"
 composeMaterial3WindowSizeClass = "1.0.0-alpha15"
 composeMaterial3 = "1.0.0-alpha13"
 androidxFragment = "1.5.2"
