--- a/.github/workflows/DependencyDiff.yml
+++ b/.github/workflows/DependencyDiff.yml
@@ -33,7 +33,7 @@ jobs:
           issue-number: ${{ github.event.pull_request.number }}
           body-includes: Dependency diff
       - uses: peter-evans/create-or-update-comment@b95e16d2859ad843a14218d1028da5b2c4cbc4b4
-        if: ${{ steps.dependency-diff.outputs.text-diff != null || steps.find_comment.outputs.comment-id != null }}
+        if: ${{ steps.dependency-diff.outputs.text-diff != null && steps.find_comment.outputs.comment-id != null }}
         with:
           body: |
             Dependency diff:
