--- a/.github/workflows/DependencyDiff.yml
+++ b/.github/workflows/DependencyDiff.yml
@@ -4,6 +4,10 @@ on:
     paths:
       - 'gradle/libs.versions.toml'
       - '**/build.gradle.kts'
+concurrency:
+  group: build-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   dependency_diff:
     runs-on: ubuntu-latest
