--- a/.github/workflows/Format.yml
+++ b/.github/workflows/Format.yml
@@ -1,7 +1,7 @@
 name: Format
 on: [pull_request]
 concurrency:
-  group: build-${{ github.ref }}
+  group: format-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
