--- a/app-android/src/main/AndroidManifest.xml
+++ b/app-android/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.Androidprojecttemplate2022"
+        android:theme="@style/Theme.DroidKaigi"
         tools:targetApi="31">
         <activity
             android:name="io.github.droidkaigi.confsched2022.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Androidprojecttemplate2022">
+            android:theme="@style/Theme.DroidKaigi.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
