--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,6 +33,7 @@ multiplatformSettings = "0.9"
 robolectric = "4.8.1"
 kermit = "1.1.3"
 kotlinxDatetime = "0.4.0"
+accompanistPager = "0.26.1-alpha"
 
 [libraries]
 androidGradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
@@ -58,6 +59,8 @@ composeMaterial3WindowSizeClass = { module = "androidx.compose.material3:materia
 daggerHiltAndroid = { module = "com.google.dagger:hilt-android", version.ref = "dagger" }
 daggerHiltAndroidCompiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "dagger" }
 
+accompanistPager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanistPager" }
+
 kotlinSerializationJson = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 
 androidxCoreKtx = { module = "androidx.core:core-ktx", version.ref = "androidxCore" }
@@ -68,6 +71,8 @@ androidxFragment = { module = "androidx.fragment:fragment", version.ref = "andro
 androidxDatastorePreferences = { module = "androidx.datastore:datastore-preferences", version.ref = "androidxDatastore" }
 multiplatformSettingsCoroutines = { module = "com.russhwolf:multiplatform-settings-coroutines", version.ref = "multiplatformSettings" }
 multiplatformSettingsDatastore = { module = "com.russhwolf:multiplatform-settings-datastore", version.ref = "multiplatformSettings" }
+
+material3 = { module = "com.google.android.material:material", version = "1.6.1" }
 
 hiltNavigationCompose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 
