--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -41,6 +41,10 @@ firebaseAuth = "21.0.7"
 androidxStartup = "1.1.1"
 kluent = "1.68"
 coilCompose="2.2.0"
+ksp = "1.7.10-1.0.6"
+paparazzi = "1.0.0"
+showkase = "1.0.0-beta13"
+testParameterInjector = "1.8"
 
 [libraries]
 androidGradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
@@ -112,9 +116,14 @@ androidxTestEspressoEspressoCore = { module = "androidx.test.espresso:espresso-c
 hiltAndroidTesting = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "dagger" }
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 kluentAndroid = {module = "org.amshove.kluent:kluent-android", version.ref = "kluent" }
+showkase-runtime = { group = "com.airbnb.android", name = "showkase", version.ref = "showkase" }
+showkase-processor = { group = "com.airbnb.android", name = "showkase-processor", version.ref = "showkase" }
+testParameterInjector = { group = "com.google.testparameterinjector", name = "test-parameter-injector", version.ref = "testParameterInjector" }
 
 [plugins]
 androidGradlePlugin = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 androidGradleLibraryPlugin = { id = "com.android.library", version.ref = "androidGradlePlugin" }
 kotlinPlugin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 hiltGradlePlugin = { id = "com.google.dagger.hilt.android", version.ref = "dagger" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+paparazzi = { id = "app.cash.paparazzi", version.ref = "paparazzi" }
