--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -40,7 +40,8 @@ firebaseCommon = "20.1.1"
 firebaseAuth = "21.0.8"
 androidxStartup = "1.1.1"
 kluent = "1.68"
-coilCompose="2.2.0"
+coilCompose = "2.2.0"
+mokoResources = "0.20.1"
 
 [libraries]
 androidGradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
@@ -54,6 +55,7 @@ ziplineKotlinPlugin = { module = "app.cash.zipline:zipline-kotlin-plugin", versi
 ziplineGradlePlugin = { module = "app.cash.zipline:zipline-gradle-plugin", version.ref = "zipline" }
 firebasePlugin = { module = "com.google.gms:google-services", version.ref = "firebasePlugin" }
 androidDesugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugarJdkLibs" }
+mokoResourcesGenerator = { module = "dev.icerock.moko:resources-generator", version.ref = "mokoResources" }
 
 composeRuntime = { module = "androidx.compose.runtime:runtime", version.ref = "compose" }
 composeUi = { module = "androidx.compose.ui:ui", version.ref = "compose" }
@@ -76,7 +78,7 @@ androidxLifecycleLifecycleRuntimeKtx = { module = "androidx.lifecycle:lifecycle-
 androidxActivityCompose = { module = "androidx.activity:activity-compose", version.ref = "androidxActivity" }
 androidxFragment = { module = "androidx.fragment:fragment", version.ref = "androidxFragment" }
 androidxDatastorePreferences = { module = "androidx.datastore:datastore-preferences", version.ref = "androidxDatastore" }
-androidxStartup =  { module = "androidx.startup:startup-runtime", version.ref = "androidxStartup" }
+androidxStartup = { module = "androidx.startup:startup-runtime", version.ref = "androidxStartup" }
 
 multiplatformSettingsCoroutines = { module = "com.russhwolf:multiplatform-settings-coroutines", version.ref = "multiplatformSettings" }
 multiplatformSettingsDatastore = { module = "com.russhwolf:multiplatform-settings-datastore", version.ref = "multiplatformSettings" }
@@ -103,6 +105,8 @@ multiplatformFirebaseAuth = { module = "dev.gitlive:firebase-auth", version.ref 
 firebaseCommon = { module = "com.google.firebase:firebase-common", version.ref = "firebaseCommon" }
 firebaseAuth = { module = "com.google.firebase:firebase-auth", version.ref = "firebaseAuth" }
 coilCompose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+mokoResources = { module = "dev.icerock.moko:resources", version.ref = "mokoResources" }
+mokoResourcesCompose = { module = "dev.icerock.moko:resources-compose", version.ref = "mokoResources" }
 
 # test
 
@@ -111,7 +115,7 @@ androidxTestExtJunit = { module = "androidx.test.ext:junit", version.ref = "andr
 androidxTestEspressoEspressoCore = { module = "androidx.test.espresso:espresso-core", version.ref = "androidxTestEspresso" }
 hiltAndroidTesting = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "dagger" }
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
-kluentAndroid = {module = "org.amshove.kluent:kluent-android", version.ref = "kluent" }
+kluentAndroid = { module = "org.amshove.kluent:kluent-android", version.ref = "kluent" }
 
 [plugins]
 androidGradlePlugin = { id = "com.android.application", version.ref = "androidGradlePlugin" }
