--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -48,7 +48,7 @@ jobs:
         run: ./gradlew compileZipline --stacktrace
 
       - name: Run local tests
-        run: ./gradlew testDebug -x :preview-screenshots:tesDebug --stacktrace
+        run: ./gradlew testDebug -x :preview-screenshots:testDebug --stacktrace
 
       - name: Run screenshot tests
         run: ./gradlew :preview-screenshots:verifyPaparazziDebug --stacktrace
