--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -54,14 +54,16 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: build-outputs
-          path: app/build/outputs
+          path: app-android/build/outputs
+          retention-days: 14
 
       - name: Upload build reports
         if: always()
         uses: actions/upload-artifact@v3
         with:
           name: build-reports
-          path: app/build/reports
+          path: app-android/build/reports
+          retention-days: 30
 #  save computation resource for now
 #  androidTest:
 #    needs: build
