--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -47,6 +47,16 @@ jobs:
       - name: Build zipline
         run: ./gradlew compileZipline --stacktrace
 
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
+        if: github.ref == 'refs/heads/main'
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: './core-zipline/build/zipline/'
+        if: github.ref == 'refs/heads/main'
+
       - name: Run local tests
         run: ./gradlew testDebug --stacktrace
 
