--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -57,6 +57,11 @@ jobs:
           path: './core-zipline/build/zipline/'
         if: github.ref == 'refs/heads/main'
 
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
+        if: github.ref == 'refs/heads/main'
+
       - name: Run local tests
         run: ./gradlew testDebug --stacktrace
 
