--- a/.github/workflows/DeployZipline.yml
+++ b/.github/workflows/DeployZipline.yml
@@ -5,11 +5,11 @@ on:
     branches:
       - main
 concurrency:
-  group: build-${{ github.ref }}
+  group: deploy-zipline-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     permissions:
