--- a/.github/workflows/DeployZipline.yml
+++ b/.github/workflows/DeployZipline.yml
@@ -14,6 +14,7 @@ jobs:
     timeout-minutes: 60
     permissions:
       id-token: write
+      contents: read
 
     steps:
       - name: Checkout
