--- a/.github/workflows/DeployZipline.yml
+++ b/.github/workflows/DeployZipline.yml
@@ -10,6 +10,9 @@ concurrency:
 
 jobs:
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     timeout-minutes: 60
     permissions:
