--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -42,6 +42,7 @@ androidxStartup = "1.1.1"
 kluent = "1.68"
 coilCompose="2.2.0"
 koin = "3.2.0"
+androidXChromeCustomTabs = "1.3.0"
 
 [libraries]
 androidGradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
@@ -79,6 +80,7 @@ androidxActivityCompose = { module = "androidx.activity:activity-compose", versi
 androidxFragment = { module = "androidx.fragment:fragment", version.ref = "androidxFragment" }
 androidxDatastorePreferences = { module = "androidx.datastore:datastore-preferences", version.ref = "androidxDatastore" }
 androidxStartup =  { module = "androidx.startup:startup-runtime", version.ref = "androidxStartup" }
+androidXChromeCustomTabs = { module = "androidx.browser:browser", version.ref = "androidXChromeCustomTabs" }
 
 multiplatformSettingsCoroutines = { module = "com.russhwolf:multiplatform-settings-coroutines", version.ref = "multiplatformSettings" }
 multiplatformSettingsDatastore = { module = "com.russhwolf:multiplatform-settings-datastore", version.ref = "multiplatformSettings" }
