--- a/gradle.properties
+++ b/gradle.properties
@@ -33,3 +33,10 @@ org.gradle.caching=true
 org.gradle.parallel=true
 
 kotlin.js.compiler=ir
+
+# Kotlin Multiplatform Project does not support product flavor.
+# Kotlin/Native part of the project has release/debug distinction, but it's not global.
+# So to mimick product flavor capability of Android, we need to provide additional property
+# in order to determine flavors.
+# https://github.com/yshrsmz/BuildKonfig#product-flavor
+buildkonfig.flavor=dev
