--- a/app-ios/Sources/AppFeature/swiftgen.yml
+++ b/app-ios/Sources/AppFeature/swiftgen.yml
@@ -1,12 +1,17 @@
 input_dir: Resources/
 output_dir: ${DERIVED_SOURCES_DIR}/
 
+xcassets:
+  inputs: Assets.xcassets
+  outputs:
+    templateName: swift5
+    output: Assets.generated.swift
+    params:
+      enumName: Assets
+
 strings:
   inputs: en.lproj
   filter: .+\.strings$
   outputs:
     templateName: structured-swift5
     output: L10n.generated.swift
-    params:
-      publicAccess: true
-      bundle: Bundle.myModule
