--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -7,6 +7,9 @@ on:
     branches:
       - main
   pull_request:
+    paths-ignore:
+      - 'app-ios/**'
+
 concurrency:
   group: build-${{ github.ref }}
   cancel-in-progress: true
