--- a/.github/workflows/iOSBuild.yml
+++ b/.github/workflows/iOSBuild.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Build KMM Module
-        run: ./gradlew appioscombined:assembleXCFramework
+        run: ./gradlew appioscombined:assembleAppioscombinedReleaseXCFramework
       - name: Upload xcframework artifact
         uses: actions/upload-artifact@v3
         with:
           name: appioscombined.xcframework
-          path: app-ios-combined/build/XCFrameworks/debug/appioscombined.xcframework/
+          path: app-ios-combined/build/XCFrameworks/release/appioscombined.xcframework/
