Add the exclusion rule to keep a project icon

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ local.properties
 !/.idea/dictionaries
 /.idea/dictionaries/*
 !/.idea/dictionaries/kaigiDictionary.xml
+# Keep the project icon.
+!/.idea/icon.png
 
 # Gradle cache
 .gradle
