--- a/.github/workflows/iOSBuild.yml
+++ b/.github/workflows/iOSBuild.yml
@@ -46,5 +46,5 @@ jobs:
       - name: Build App
         working-directory: app-ios
         run: |
-          scripts/build.sh build 'DroidKaigi2022 (iOS)
+          scripts/build.sh build 'DroidKaigi2022 (iOS)' Debug
 
