--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -15,6 +15,14 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  get-pr-number:
+    if: github.event_name == 'pull_request'
+    name: "get-pr-number"
+    runs-on: ubuntu-latest
+    steps:
+      - name: ${{ github.event.pull_request.number }}
+        run: echo ok
+
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 60
@@ -56,8 +64,8 @@ jobs:
       - name: Upload build outputs (APKs)
         uses: actions/upload-artifact@v3
         with:
-          name: develop-debug-apk
-          path: app-android/build/outputs/apk/dev/debug/app-android-dev-debug.apk
+          name: assemble-output
+          path: app-android/build/outputs
           retention-days: 14
 
       - name: Upload build reports
@@ -67,6 +75,37 @@ jobs:
           name: build-reports
           path: app-android/build/reports
           retention-days: 30
+  # stage default package only on push events (see stage-app.yml for pull_requests)
+  stage-default:
+    if: github.event_name == 'push'
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+        with:
+          ref: gh-actions
+          path: gh-actions
+      - uses: actions/download-artifact@v3
+        with:
+          name: assemble-output
+          path: ~/assemble-output
+      - uses: ./gh-actions/actions/find-files
+        id: find-dev-debug-apk
+        with:
+          pattern: "~/assemble-output/**/app-android-dev-debug.apk"
+      - uses: jmatsu/dg-upload-app-action@v0.2
+        id: upload
+        with:
+          app_owner_name: droidkaigi
+          api_token: ${{ secrets.DEPLOYGATE_API_TOKEN }}
+          app_file_path: ${{ fromJSON(steps.find-dev-debug-apk.outputs.paths)[0] }}
+          message: GitHub Actions have staged an artifact of ${{ github.ref }} / ${{ github.sha }}
+          distribution_find_by: name
+          distribution_id: ${{ format('staging/{0}', github.ref) }}
+          release_note: ${{ format('[main] Workflow {0}/{1} based on {2}', github.run_id , github.run_number , github.sha) }}
+          pin: false
+
 #  save computation resource for now
 #  androidTest:
 #    needs: build
